c4prj2_input/grade.txt
Grading at Fri 31 Dec 2021 05:42:32 AM UTC
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:7:22: error: ‘return’ with a value, in function returning void [-Werror=return-type]
    7 | #define EXIT_FAILURE 1
      |                      ^
future.c:14:10: note: in expansion of macro ‘EXIT_FAILURE’
   14 |   return EXIT_FAILURE;
      |          ^~~~~~~~~~~~
future.c:9:6: note: declared here
    9 | void add_future_card(future_cards_t * fc, size_t index, card_t * ptr) {
      |      ^~~~~~~~~~~~~~~
future.c:7:22: error: ‘return’ with a value, in function returning void [-Werror=return-type]
    7 | #define EXIT_FAILURE 1
      |                      ^
future.c:20:10: note: in expansion of macro ‘EXIT_FAILURE’
   20 |   return EXIT_FAILURE;
      |          ^~~~~~~~~~~~
future.c:9:6: note: declared here
    9 | void add_future_card(future_cards_t * fc, size_t index, card_t * ptr) {
      |      ^~~~~~~~~~~~~~~
future.c:7:22: error: ‘return’ with a value, in function returning void [-Werror=return-type]
    7 | #define EXIT_FAILURE 1
      |                      ^
future.c:31:11: note: in expansion of macro ‘EXIT_FAILURE’
   31 |    return EXIT_FAILURE;
      |           ^~~~~~~~~~~~
future.c:9:6: note: declared here
    9 | void add_future_card(future_cards_t * fc, size_t index, card_t * ptr) {
      |      ^~~~~~~~~~~~~~~
future.c:7:22: error: ‘return’ with a value, in function returning void [-Werror=return-type]
    7 | #define EXIT_FAILURE 1
      |                      ^
future.c:49:10: note: in expansion of macro ‘EXIT_FAILURE’
   49 |   return EXIT_FAILURE;
      |          ^~~~~~~~~~~~
future.c:9:6: note: declared here
    9 | void add_future_card(future_cards_t * fc, size_t index, card_t * ptr) {
      |      ^~~~~~~~~~~~~~~
future.c: In function ‘future_cards_from_deck’:
future.c:7:22: error: ‘return’ with a value, in function returning void [-Werror=return-type]
    7 | #define EXIT_FAILURE 1
      |                      ^
future.c:79:10: note: in expansion of macro ‘EXIT_FAILURE’
   79 |   return EXIT_FAILURE;
      |          ^~~~~~~~~~~~
future.c:59:6: note: declared here
   59 | void future_cards_from_deck(deck_t* deck, future_cards_t* fc) {
      |      ^~~~~~~~~~~~~~~~~~~~~~
future.c:7:22: error: ‘return’ with a value, in function returning void [-Werror=return-type]
    7 | #define EXIT_FAILURE 1
      |                      ^
future.c:85:10: note: in expansion of macro ‘EXIT_FAILURE’
   85 |   return EXIT_FAILURE;
      |          ^~~~~~~~~~~~
future.c:59:6: note: declared here
   59 | void future_cards_from_deck(deck_t* deck, future_cards_t* fc) {
      |      ^~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation of future.c failed

Overall Grade: F
